--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # === Project related non-sync files ===
-examples/wm_imgs
-Visualizations*/
+examples/water*
+Vis*
 test*
 
 # === Standard build files ====
